--- a/stt/stt/Cargo.toml
+++ b/stt/stt/Cargo.toml
@@ -13,12 +13,13 @@ crate-type = ["rlib"]
 
 [dependencies]
 golem-rust = { workspace = true }
+log = { workspace = true }
 wit-bindgen = { version = "0.40.0" }
 serde = { workspace = true }
 serde_json = { workspace = true }
 http = "=1.3.1"
 url = "2.5.4"
-wasi-async-runtime = "0.1.2"
 wstd = "0.5.3"
+wasi-logger = "0.1.2"
 
 derive_more = { version = "2.0.1", features = ["from"] }
