--- a/Makefile.toml
+++ b/Makefile.toml
@@ -13,7 +13,8 @@ args = ["test"]
 [tasks.build]
 script_runner = "@duckscript"
 script = '''
-domains = array llm search graph
+
+domains = array llm websearch search graph
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -28,7 +29,8 @@ end
 [tasks.release-build]
 script_runner = "@duckscript"
 script = '''
-domains = array llm search graph
+
+domains = array llm websearch search graph
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -44,7 +46,7 @@ end
 script_runner = "@duckscript"
 script = '''
 #!/bin/bash
-domains = array llm search graph
+domains = array llm websearch search graph
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -60,7 +62,7 @@ end
 script_runner = "@duckscript"
 script = '''
 #!/bin/bash
-domains = array llm search graph
+domains = array llm websearch search graph
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -75,7 +77,7 @@ end
 [tasks.wit]
 script_runner = "@duckscript"
 script = '''
-domains = array llm search graph
+domains = array llm websearch search graph
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -91,7 +93,7 @@ end
 description = "Builds all test components with golem-cli"
 script_runner = "@duckscript"
 script = '''
-domains = array llm search graph
+domains = array llm websearch search graph
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -144,7 +146,8 @@ is_portable = eq ${portable} "yes"
 environment = get_env "ENVIRONMENT"
 is_dev = eq ${environment} "dev"
 
-targets = array llm_openai llm_anthropic llm_grok llm_openrouter llm_ollama llm_bedrock search_algolia search_elasticsearch search_meilisearch search_opensearch search_typesense graph_arangodb graph_janusgraph graph_neo4j
+
+targets = array llm_openai llm_anthropic llm_grok llm_openrouter llm_ollama web_search_brave web_search_google web_search_serper web_search_tavily search_algolia search_elasticsearch search_meilisearch search_opensearch search_typesense graph_arangodb graph_janusgraph graph_neo4j
 
 for target in ${targets}
     if ${is_portable}
@@ -172,7 +175,9 @@ is_portable = eq ${portable} "yes"
 environment = get_env "ENVIRONMENT"
 is_dev = eq ${environment} "dev"
 
-targets = array llm_openai llm_anthropic llm_grok llm_openrouter llm_ollama llm_bedrock search_algolia search_elasticsearch search_meilisearch search_opensearch search_typesense graph_arangodb graph_janusgraph graph_neo4j
+
+targets = array llm_openai llm_anthropic llm_grok llm_openrouter llm_ollama websearch_brave websearch_google websearch_serper websearch_tavily search_algolia search_elasticsearch search_meilisearch search_opensearch search_typesense graph_arangodb graph_janusgraph graph_neo4j
+
 for target in ${targets}
     if ${is_portable}
         if ${is_dev}
