--- a/test/llm/components-rust/test-llm/golem.yaml
+++ b/test/llm/components-rust/test-llm/golem.yaml
@@ -22,10 +22,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_openai.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_openai_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_llm_openai.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_openai_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_llm_openai.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_llm_openai.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_openai_plugged.wasm
         sourceWit: wit
@@ -48,10 +48,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_bedrock.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_bedrock_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_llm_bedrock.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_bedrock_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_llm_bedrock.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_llm_bedrock.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_bedrock_plugged.wasm
         sourceWit: wit
@@ -74,10 +74,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_anthropic.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_anthropic_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_llm_anthropic.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_anthropic_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_llm_anthropic.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_llm_anthropic.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_anthropic_plugged.wasm
         sourceWit: wit
@@ -100,10 +100,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_grok.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_grok_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_llm_grok.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_grok_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_llm_grok.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_llm_grok.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_grok_plugged.wasm
         sourceWit: wit
@@ -126,10 +126,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_openrouter.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_openrouter_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_llm_openrouter.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_openrouter_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_llm_openrouter.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_llm_openrouter.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_openrouter_plugged.wasm
         sourceWit: wit
@@ -152,10 +152,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_ollama.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_ollama_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_llm_ollama.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_ollama_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_llm.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_llm_ollama.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_llm_ollama.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_ollama_plugged.wasm
         sourceWit: wit
@@ -179,10 +179,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/release/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_llm_openai.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_openai_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_llm_openai.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_openai_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_llm.wasm
-              - ../../../target/wasm32-wasip1/release/golem_llm_openai.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_llm_openai.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_openai_plugged.wasm
         sourceWit: wit
@@ -205,10 +205,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/release/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_llm_bedrock.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_bedrock_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_llm_bedrock.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_bedrock_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_llm.wasm
-              - ../../../target/wasm32-wasip1/release/golem_llm_bedrock.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_llm_bedrock.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_bedrock_plugged.wasm
         sourceWit: wit
@@ -231,10 +231,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/release/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_llm_anthropic.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_anthropic_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_llm_anthropic.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_anthropic_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_llm.wasm
-              - ../../../target/wasm32-wasip1/release/golem_llm_anthropic.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_llm_anthropic.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_anthropic_plugged.wasm
         sourceWit: wit
@@ -257,10 +257,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/release/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_llm_grok.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_grok_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_llm_grok.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_grok_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_llm.wasm
-              - ../../../target/wasm32-wasip1/release/golem_llm_grok.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_llm_grok.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_grok_plugged.wasm
         sourceWit: wit
@@ -283,10 +283,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/release/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_llm_openrouter.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_openrouter_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_llm_openrouter.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_openrouter_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_llm.wasm
-              - ../../../target/wasm32-wasip1/release/golem_llm_openrouter.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_llm_openrouter.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_openrouter_plugged.wasm
         sourceWit: wit
@@ -309,10 +309,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/release/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_llm_ollama.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_ollama_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_llm_ollama.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_ollama_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_llm.wasm
-              - ../../../target/wasm32-wasip1/release/golem_llm_ollama.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_llm_ollama.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_ollama_plugged.wasm
         sourceWit: wit
