--- a/test/search/components-rust/test-search/golem.yaml
+++ b/test/search/components-rust/test-search/golem.yaml
@@ -22,10 +22,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/debug/test_search.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_search_algolia.wasm ../../target/wasm32-wasip1/debug/test_search.wasm -o ../../target/wasm32-wasip1/debug/test_algolia_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_search_algolia.wasm ../../target/wasm32-wasip1/debug/test_search.wasm -o ../../target/wasm32-wasip1/debug/test_algolia_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_search.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_search_algolia.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_search_algolia.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_algolia_plugged.wasm
         sourceWit: wit
@@ -48,10 +48,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/debug/test_search.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_search_elasticsearch.wasm ../../target/wasm32-wasip1/debug/test_search.wasm -o ../../target/wasm32-wasip1/debug/test_elasticsearch_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_search_elasticsearch.wasm ../../target/wasm32-wasip1/debug/test_search.wasm -o ../../target/wasm32-wasip1/debug/test_elasticsearch_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_search.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_search_elasticsearch.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_search_elasticsearch.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_elasticsearch_plugged.wasm
         sourceWit: wit
@@ -74,10 +74,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/debug/test_search.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_search_meilisearch.wasm ../../target/wasm32-wasip1/debug/test_search.wasm -o ../../target/wasm32-wasip1/debug/test_meilisearch_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_search_meilisearch.wasm ../../target/wasm32-wasip1/debug/test_search.wasm -o ../../target/wasm32-wasip1/debug/test_meilisearch_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_search.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_search_meilisearch.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_search_meilisearch.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_meilisearch_plugged.wasm
         sourceWit: wit
@@ -100,10 +100,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/debug/test_search.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_search_opensearch.wasm ../../target/wasm32-wasip1/debug/test_search.wasm -o ../../target/wasm32-wasip1/debug/test_opensearch_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_search_opensearch.wasm ../../target/wasm32-wasip1/debug/test_search.wasm -o ../../target/wasm32-wasip1/debug/test_opensearch_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_search.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_search_opensearch.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_search_opensearch.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_opensearch_plugged.wasm
         sourceWit: wit
@@ -126,10 +126,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/debug/test_search.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_search_typesense.wasm ../../target/wasm32-wasip1/debug/test_search.wasm -o ../../target/wasm32-wasip1/debug/test_typesense_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_search_typesense.wasm ../../target/wasm32-wasip1/debug/test_search.wasm -o ../../target/wasm32-wasip1/debug/test_typesense_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_search.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_search_typesense.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_search_typesense.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_typesense_plugged.wasm
         sourceWit: wit
@@ -153,10 +153,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/release/test_search.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_search_algolia.wasm ../../target/wasm32-wasip1/release/test_search.wasm -o ../../target/wasm32-wasip1/release/test_algolia_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_search_algolia.wasm ../../target/wasm32-wasip1/release/test_search.wasm -o ../../target/wasm32-wasip1/release/test_algolia_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_search.wasm
-              - ../../../target/wasm32-wasip1/release/golem_search_algolia.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_search_algolia.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_algolia_plugged.wasm
         sourceWit: wit
@@ -179,10 +179,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/release/test_search.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_search_elasticsearch.wasm ../../target/wasm32-wasip1/release/test_search.wasm -o ../../target/wasm32-wasip1/release/test_elasticsearch_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_search_elasticsearch.wasm ../../target/wasm32-wasip1/release/test_search.wasm -o ../../target/wasm32-wasip1/release/test_elasticsearch_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_search.wasm
-              - ../../../target/wasm32-wasip1/release/golem_search_elasticsearch.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_search_elasticsearch.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_elasticsearch_plugged.wasm
         sourceWit: wit
@@ -205,10 +205,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/release/test_search.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_search_meilisearch.wasm ../../target/wasm32-wasip1/release/test_search.wasm -o ../../target/wasm32-wasip1/release/test_meilisearch_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_search_meilisearch.wasm ../../target/wasm32-wasip1/release/test_search.wasm -o ../../target/wasm32-wasip1/release/test_meilisearch_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_search.wasm
-              - ../../../target/wasm32-wasip1/release/golem_search_meilisearch.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_search_meilisearch.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_meilisearch_plugged.wasm
         sourceWit: wit
@@ -231,10 +231,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/release/test_search.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_search_opensearch.wasm ../../target/wasm32-wasip1/release/test_search.wasm -o ../../target/wasm32-wasip1/release/test_opensearch_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_search_opensearch.wasm ../../target/wasm32-wasip1/release/test_search.wasm -o ../../target/wasm32-wasip1/release/test_opensearch_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_search.wasm
-              - ../../../target/wasm32-wasip1/release/golem_search_opensearch.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_search_opensearch.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_opensearch_plugged.wasm
         sourceWit: wit
@@ -257,10 +257,10 @@ components:
               - ../../common-rust
             targets:
               - ../../target/wasm32-wasip1/release/test_search.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_search_typesense.wasm ../../target/wasm32-wasip1/release/test_search.wasm -o ../../target/wasm32-wasip1/release/test_typesense_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_search_typesense.wasm ../../target/wasm32-wasip1/release/test_search.wasm -o ../../target/wasm32-wasip1/release/test_typesense_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_search.wasm
-              - ../../../target/wasm32-wasip1/release/golem_search_typesense.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_search_typesense.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_typesense_plugged.wasm
         sourceWit: wit
