--- a/test/websearch/components-rust/test-websearch/golem.yaml
+++ b/test/websearch/components-rust/test-websearch/golem.yaml
@@ -11,10 +11,10 @@ components:
               - wit-generated
             targets:
               - ../../target/wasm32-wasip1/debug/test_websearch.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_web_search_google.wasm ../../target/wasm32-wasip1/debug/test_websearch.wasm -o ../../target/wasm32-wasip1/debug/test_google_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_web_search_google.wasm ../../target/wasm32-wasip1/debug/test_websearch.wasm -o ../../target/wasm32-wasip1/debug/test_google_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_websearch.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_web_search_google.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_web_search_google.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_google_plugged.wasm
         sourceWit: wit
@@ -32,10 +32,10 @@ components:
               - wit-generated
             targets:
               - ../../target/wasm32-wasip1/debug/test_websearch.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_web_search_serper.wasm ../../target/wasm32-wasip1/debug/test_websearch.wasm -o ../../target/wasm32-wasip1/debug/test_serper_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_web_search_serper.wasm ../../target/wasm32-wasip1/debug/test_websearch.wasm -o ../../target/wasm32-wasip1/debug/test_serper_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_websearch.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_web_search_serper.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_web_search_serper.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_serper_plugged.wasm
         sourceWit: wit
@@ -53,10 +53,10 @@ components:
               - wit-generated
             targets:
               - ../../target/wasm32-wasip1/debug/test_websearch.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_web_search_tavily.wasm ../../target/wasm32-wasip1/debug/test_websearch.wasm -o ../../target/wasm32-wasip1/debug/test_tavily_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_web_search_tavily.wasm ../../target/wasm32-wasip1/debug/test_websearch.wasm -o ../../target/wasm32-wasip1/debug/test_tavily_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_websearch.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_web_search_tavily.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_web_search_tavily.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_tavily_plugged.wasm
         sourceWit: wit
@@ -74,10 +74,10 @@ components:
               - wit-generated
             targets:
               - ../../target/wasm32-wasip1/debug/test_websearch.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_web_search_brave.wasm ../../target/wasm32-wasip1/debug/test_websearch.wasm -o ../../target/wasm32-wasip1/debug/test_brave_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_web_search_brave.wasm ../../target/wasm32-wasip1/debug/test_websearch.wasm -o ../../target/wasm32-wasip1/debug/test_brave_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_websearch.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_web_search_brave.wasm
+              - ../../../../target/wasm32-wasip1/debug/golem_web_search_brave.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_brave_plugged.wasm
         sourceWit: wit
@@ -96,10 +96,10 @@ components:
               - wit-generated
             targets:
               - ../../target/wasm32-wasip1/release/test_websearch.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_web_search_google.wasm ../../target/wasm32-wasip1/release/test_websearch.wasm -o ../../target/wasm32-wasip1/release/test_google_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_web_search_google.wasm ../../target/wasm32-wasip1/release/test_websearch.wasm -o ../../target/wasm32-wasip1/release/test_google_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_websearch.wasm
-              - ../../../target/wasm32-wasip1/release/golem_web_search_google.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_web_search_google.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_google_plugged.wasm
         sourceWit: wit
@@ -117,10 +117,10 @@ components:
               - wit-generated
             targets:
               - ../../target/wasm32-wasip1/release/test_websearch.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_web_search_serper.wasm ../../target/wasm32-wasip1/release/test_websearch.wasm -o ../../target/wasm32-wasip1/release/test_serper_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_web_search_serper.wasm ../../target/wasm32-wasip1/release/test_websearch.wasm -o ../../target/wasm32-wasip1/release/test_serper_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_websearch.wasm
-              - ../../../target/wasm32-wasip1/release/golem_web_search_serper.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_web_search_serper.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_serper_plugged.wasm
         sourceWit: wit
@@ -138,10 +138,10 @@ components:
               - wit-generated
             targets:
               - ../../target/wasm32-wasip1/release/test_websearch.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_web_search_tavily.wasm ../../target/wasm32-wasip1/release/test_websearch.wasm -o ../../target/wasm32-wasip1/release/test_tavily_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_web_search_tavily.wasm ../../target/wasm32-wasip1/release/test_websearch.wasm -o ../../target/wasm32-wasip1/release/test_tavily_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_websearch.wasm
-              - ../../../target/wasm32-wasip1/release/golem_web_search_tavily.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_web_search_tavily.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_tavily_plugged.wasm
         sourceWit: wit
@@ -159,10 +159,10 @@ components:
               - wit-generated
             targets:
               - ../../target/wasm32-wasip1/release/test_websearch.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_web_search_brave.wasm ../../target/wasm32-wasip1/release/test_websearch.wasm -o ../../target/wasm32-wasip1/release/test_brave_plugged.wasm
+          - command: wac plug --plug ../../../../target/wasm32-wasip1/release/golem_web_search_brave.wasm ../../target/wasm32-wasip1/release/test_websearch.wasm -o ../../target/wasm32-wasip1/release/test_brave_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/release/test_websearch.wasm
-              - ../../../target/wasm32-wasip1/release/golem_web_search_brave.wasm
+              - ../../../../target/wasm32-wasip1/release/golem_web_search_brave.wasm
             targets:
               - ../../target/wasm32-wasip1/release/test_brave_plugged.wasm
         sourceWit: wit
